Table visibility fix

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@
 /*Fonts*/
 
 /*General*/
+.table{
+    font-weight: 500 !important;
+}
 
 .remove-pd-mar {
     padding: 0px;
